<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:scrollbars="vertical" 
	        >
	        <!-- 현재날짜 -->
	        <FrameLayout
	            android:id="@+id/dateInfo"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            >
				<ImageView
				    android:id="@+id/dateBg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:adjustViewBounds="true"/>                
				<TextView
				    android:id="@+id/date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:textColor="@color/date" />
	        </FrameLayout>
	        <!-- Status -->
	        <FrameLayout
	            android:id="@+id/Status"
	            android:layout_marginTop="5dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            >
	            <ImageView
	                android:id="@+id/imageStatus"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:adjustViewBounds="true"
	                 />
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:paddingLeft="10dp"
	                android:orientation="horizontal"
	                >
	                <ImageView
	                    android:id="@+id/statusWhale"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:adjustViewBounds="true"
	                    />
		            <TextView
		                android:id="@+id/textStatus"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="5dp"
		                android:layout_gravity="center_vertical"
		                android:textColor="@color/status"
		                />
	            </LinearLayout>
	        </FrameLayout>
	        
	        <!-- 애니메이션 서클 -->
	        <FrameLayout
	            android:id="@+id/circleInfo"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:layout_marginBottom="15dp"
	            >
	            <FrameLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    >
		            <LinearLayout
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:orientation="vertical"
		                >
		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:textColor="@color/status_usage"
		                    android:layout_gravity="center_horizontal"
		                    android:text="@string/status_current_usage"
		                    />
		                <TextView
		                    android:id="@+id/usageTime"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_gravity="center_horizontal"
		                    android:textColor="@color/status_usage"
		                    />
		            </LinearLayout>
				    <ImageView
		                android:id="@+id/anime"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:adjustViewBounds="true"
		                />
				</FrameLayout>
				<ImageView
				    android:id="@+id/star"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:adjustViewBounds="true"
				    android:layout_marginBottom="10dp"
				    android:layout_marginLeft="20dp"
				    android:layout_gravity="left|bottom"
				    />
				<ImageView
				    android:id="@+id/ship"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:adjustViewBounds="true"
				    android:layout_marginRight="15dp"
				    android:layout_gravity="right|bottom"
				    />
	        </FrameLayout>
	        
	        <!-- 앱목록 -->
	        <LinearLayout
	            android:id="@+id/AppStatus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:orientation="vertical"
	            >
				<FrameLayout
				    android:id="@+id/ListHead"			    
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
				    >
		            <ImageView
		                android:id="@+id/imageListHead"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:adjustViewBounds="true"
		                 />
		            <LinearLayout
		                android:id="@+id/listHeadLayout"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:orientation="horizontal"
		                >
		                <FrameLayout
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    >
		                    <ImageView
		                        android:id="@+id/appRankBg"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:adjustViewBounds="true"
		                        />
			                <TextView
			                    android:layout_width="match_parent"
			                    android:layout_height="match_parent"
			                    android:layout_gravity="center"
			                    android:text="@string/status_app_rank"
			                    android:textColor="@color/app_status_title"
			                    />
		                </FrameLayout>
		                <FrameLayout
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    >
		                    <ImageView
		                        android:id="@+id/appNameBg"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:adjustViewBounds="true"
		                        />
			                <TextView
			                    android:layout_width="match_parent"
			                    android:layout_height="match_parent"
			                    android:layout_gravity="center"
			                    android:text="@string/status_app_name"
			                    android:textColor="@color/app_status_title"
			                    />
		                </FrameLayout>
		                <FrameLayout
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    >
		                    <ImageView
		                        android:id="@+id/appRateBg"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:adjustViewBounds="true"
		                        />
			                <TextView
			                    android:layout_width="match_parent"
			                    android:layout_height="match_parent"
			                    android:layout_gravity="center"
			                    android:text="@string/status_app_rate"
			                    android:textColor="@color/app_status_title"
			                    />
		                </FrameLayout>
		                <FrameLayout
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    >
		                    <ImageView
		                        android:id="@+id/appCountBg"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:adjustViewBounds="true"
		                        />
			                <TextView
			                    android:layout_width="match_parent"
			                    android:layout_height="match_parent"
			                    android:layout_gravity="center"
			                    android:text="@string/status_app_count"
			                    android:textColor="@color/app_status_title"
			                    />
		                </FrameLayout>
		                <FrameLayout
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    
		                    >
		                    <ImageView
		                        android:id="@+id/appTimeBg"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:adjustViewBounds="true"
		                        />
			                <TextView
			                    android:layout_width="match_parent"
			                    android:layout_height="match_parent"
			                    android:layout_gravity="center"
			                    android:text="@string/status_app_time"
			                    
			                    android:textColor="@color/app_status_title"
			                    />
		                </FrameLayout>
		            </LinearLayout>
				</FrameLayout>
				<!-- 리스트  -->
				<LinearLayout
		            android:id="@+id/ListApp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="vertical"
		            />
		        <FrameLayout
		            android:id="@+id/ListTail"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            >
		            <ImageView
		                android:id="@+id/imageListTail"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:adjustViewBounds="true"
		                />
		            <ImageView
		                android:id="@+id/btnListExpand"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:adjustViewBounds="true"
		                />
		        </FrameLayout>
	        </LinearLayout>
	    </LinearLayout>
    </ScrollView>
</FrameLayout>
